# movie_test_server

./: .gitignore  CMakeLists.txt  Doxyfile  READ.me  all_source_code_server.txt  data_logger.py  install.sh  monitor.py
include/: stream_app.hpp
include/display/: sdl_renderer.hpp
include/stream/: control_relay.hpp  h264_decoder.hpp  receiver_thread.hpp  udp_receiver.hpp
src/: main.cpp  stream_app.cpp
src/display/: sdl_renderer.cpp
src/stream/: control_relay.cpp  h264_decoder.cpp  receiver_thread.cpp  udp_receiver.cpp
